--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<head>
+<link rel="stylesheet" href="estilo.css">
+</head>
+
     <body>
    <form action='/promocoes' method="post">
    <div>
